--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -79,8 +79,8 @@ file(GLOB miopen_cpp "miopen/*.cpp")
 file(GLOB mkl_cpp "mkl/*.cpp")
 file(GLOB mkldnn_cpp "mkldnn/*.cpp")
 
-file(GLOB nestedtensor_h "nestedtensor/*.h")
-file(GLOB nestedtensor_cpp "nestedtensor/*.cpp")
+file(GLOB nestedtensor_h "native/nestedtensor/*.h")
+file(GLOB nestedtensor_cpp "native/nestedtensor/*.cpp")
 
 file(GLOB native_cpp "native/*.cpp")
 file(GLOB native_mkl_cpp "native/mkl/*.cpp")
