--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5685,8 +5685,8 @@
   variants: method
   device_check: NoCheck
   device_guard: False
-  dispatch:
-    NestedTensor: NestedTensor_to_dtype_layout
+  #  dispatch:
+  #    NestedTensor: NestedTensor_to_dtype_layout
 
 - func: to.device(Tensor(a) self, Device device, ScalarType dtype, bool non_blocking=False, bool copy=False, MemoryFormat? memory_format=None) -> Tensor(a)
   variants: method
