--- a/.github/workflows/actions/calculate-docker-image/action.yml
+++ b/.github/workflows/actions/calculate-docker-image/action.yml
@@ -3,12 +3,18 @@ name: Calculate docker image
 description: Determine docker image to pull, building a new one if necessary.
 
 inputs:
-  docker-image-base:
-    description: idk
+  docker-image-name:
+    description: The name of a docker image, like `pytorch-linux-xenial-py3.7-gcc7`
     required: true
+  xla:
+    description: |
+      Whether or not to use a pre-build XLA docker image.
+      Note that this is a string, either "true" or "false" due to GHA limitations.
+    required: false
   always-rebuild:
     description: If set to any value, always build a fresh docker image.
     required: false
+
 outputs:
   docker-image:
     description: The docker image to use for the rest of the workflow
@@ -21,24 +27,32 @@ runs:
       shell: bash
       id: calculate-tag
       env:
-        DOCKER_IMAGE_BASE: ${{ inputs.docker-image-base }}
+        IS_XLA: ${{ inputs.xla == 'true' && 'true' || '' }}
+        XLA_IMAGE_TAG: v0.2
+        DOCKER_IMAGE_BASE: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/${{ inputs.docker-image-name }}
       run: |
-        DOCKER_TAG=$(git rev-parse HEAD:.circleci/docker)
-        echo "::set-output name=docker-tag::${DOCKER_TAG}"
-        echo "::set-output name=docker-image::${DOCKER_IMAGE_BASE}:${DOCKER_TAG}"
+        if [ -n "${IS_XLA}" ]; then
+          echo "XLA workflow uses pre-built test image at ${XLA_IMAGE_TAG}"
+          DOCKER_TAG=$(git rev-parse HEAD:.circleci/docker)
+          echo "::set-output name=docker-tag::${DOCKER_TAG}"
+          echo "::set-output name=docker-image::${DOCKER_IMAGE_BASE}:${XLA_IMAGE_TAG}"
+        else
+          DOCKER_TAG=$(git rev-parse HEAD:.circleci/docker)
+          echo "::set-output name=docker-tag::${DOCKER_TAG}"
+          echo "::set-output name=docker-image::${DOCKER_IMAGE_BASE}:${DOCKER_TAG}"
+        fi
     - name: Check if image should be built
       shell: bash
       id: check
       if: ${{ !inputs.always-rebuild }}
       env:
-        DOCKER_IMAGE_BASE: ${{ inputs.docker-image-base }}
         BASE_REVISION: ${{ github.event.pull_request.base.sha || github.sha }}
         DOCKER_IMAGE: ${{ steps.calculate-tag.outputs.docker-image }}
-        DOCKER_TAG:  ${{ steps.calculate-tag.outputs.docker-tag }}
+        DOCKER_TAG: ${{ steps.calculate-tag.outputs.docker-tag }}
       run: |
         set -x
         # Check if image already exists, if it does then skip building it
-        if docker manifest inspect "${DOCKER_IMAGE_BASE}:${DOCKER_TAG}"; then
+        if docker manifest inspect "${DOCKER_IMAGE}"; then
           exit 0
         fi
         if [[ "$BASE_REVISION" = "$(git rev-parse HEAD)" ]]; then
@@ -62,13 +76,13 @@ runs:
           exit 1
         fi
         echo ::set-output name=rebuild::yes
+
     - name: Build and push docker image
       if: ${{ inputs.always-rebuild || steps.check.outputs.rebuild }}
       env:
-        DOCKER_IMAGE_BASE: ${{ inputs.docker-image-base }}
         DOCKER_SKIP_S3_UPLOAD: "1"
       working-directory: .circleci/docker
       shell: bash
       run: |
-        export IMAGE_NAME=${DOCKER_IMAGE_BASE#308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/}
+        export IMAGE_NAME=${{inputs.docker-image-name}}
         ./build_docker.sh
