--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -6,7 +6,7 @@ on:
       - master
       - release/*
     tags:
-      - 'ciflow/trunk/*'
+      - ciflow/trunk/*
 
 env:
   IN_CI: 1 # TODO delete in favor of GITHUB_ACTIONS
@@ -14,7 +14,7 @@ env:
 
 jobs:
   pytorch-xla-linux-bionic-py3_7-clang8-build:
-    name:  pytorch-xla-linux-bionic-py3.7-clang8
+    name: pytorch-xla-linux-bionic-py3.7-clang8
     uses: ./.github/workflows/_linux-build.yml
     with:
       build-environment: pytorch-xla-linux-bionic-py3.7-clang8
