--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -7,6 +7,10 @@ on:
     tags:
       - ciflow/periodic/*
 
+concurrency:
+  group: periodic-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  cancel-in-progress: true
+
 env:
   IN_CI: 1 # TODO delete in favor of GITHUB_ACTIONS
   IS_GHA: 1 # TODO delete in favor of GITHUB_ACTIONS
