--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -9,6 +9,10 @@ on:
     tags:
       - ciflow/trunk/*
 
+concurrency:
+  group: trunk-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  cancel-in-progress: true
+
 env:
   IN_CI: 1 # TODO delete in favor of GITHUB_ACTIONS
   IS_GHA: 1 # TODO delete in favor of GITHUB_ACTIONS
