--- a/.github/workflows/_rocm-test.yml
+++ b/.github/workflows/_rocm-test.yml
@@ -106,7 +106,7 @@ jobs:
             --ulimit stack=10485760:83886080 \
             --security-opt seccomp=unconfined \
             --cap-add=SYS_PTRACE \
-            --shm-size="8g"
+            --shm-size="8g" \
             --tty \
             --detach \
             --name="${container_name}" \
