--- a/.github/actions/setup-rocm-linux/action.yml
+++ b/.github/actions/setup-rocm-linux/action.yml
@@ -45,5 +45,6 @@ runs:
       run: |
         env | grep '^GITHUB' > "/tmp/github_env_${GITHUB_RUN_ID}"
     - name: ROCm set GPU_FLAG
+      shell: bash
       run: |
         echo "GPU_FLAG=--device=/dev/mem --device=/dev/kfd --device=/dev/dri --group-add video --group-add daemon" >> "${GITHUB_ENV}"
