--- a/.github/workflows/_linux-build.yml
+++ b/.github/workflows/_linux-build.yml
@@ -43,13 +43,13 @@ jobs:
           submodules: recursive
 
       - name: Setup EC2 Linux
-        uses: ./.github/workflows/actions/setup-ec2-linux
+        uses: ./.github/actions/setup-ec2-linux
         with:
           github-secret: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Calculate docker image
         id: calculate-docker-image
-        uses: ./.github/workflows/actions/calculate-docker-image
+        uses: ./.github/actions/calculate-docker-image
         with:
           docker-image-name: ${{ inputs.docker-image-name }}
           xla: ${{ contains(inputs.build-environment, 'xla') }}
@@ -88,7 +88,7 @@ jobs:
             -e MAX_JOBS="$(nproc --ignore=2)" \
             -e AWS_DEFAULT_REGION \
             -e IS_GHA \
-            -e PR_NUMBER \
+            -e PR_NUMBER linux-\
             -e SHA1 \
             -e BRANCH \
             -e GITHUB_RUN_ID \
